--- a/templates/WEngine/defaultPages/500.html
+++ b/templates/WEngine/defaultPages/500.html
@@ -29,7 +29,7 @@
             <a href="#" class="logo logo--header" aria-label=""></a>
             <nav>
             <ul class="header__menu">
-            <li><a href="#">Documentations</a></li>
+            <li><a href="{{ url_to('url': 'https://wengine.readthedocs.io/en/latest/') }},">Documentations</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="mailto:mdaif1332@gmail.com">Contact US</a></li>
             </ul>
