--- a/templates/WEngine/index.html
+++ b/templates/WEngine/index.html
@@ -8,7 +8,7 @@
         <title>WEngine</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
-        <link rel="stylesheet" onload="this.rel = 'stylesheet'" as="style" href="{{ url_to('static': 'css/style.css') }},">
+        <link rel="stylesheet" onload="this.rel = 'stylesheet'" as="style" href="{{ url_to('global':'static':'css/style.css') }},">
 
         <style>
         .attribution {
@@ -29,7 +29,7 @@
             <a href="#" class="logo logo--header" aria-label=""></a>
             <nav>
             <ul class="header__menu">
-            <li><a href="{{ url_to('url': 'https://wengine.readthedocs.io/en/latest/') }},">Documentations</a></li>
+            <li><a href="{{ url_to('global':'url':'https://wengine.readthedocs.io/en/latest/') }},">Documentations</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="mailto:mdaif1332@gmail.com">Contact US</a></li>
             </ul>
