Edit text typo on 404 page

--- a/templates/WEngine/defaultPages/404.html
+++ b/templates/WEngine/defaultPages/404.html
@@ -41,7 +41,7 @@
     <main>
         <section class="section intro">
             <div class="wrapper">
-            <h1 class="text-logo"> 500 Internal Server Error </h1> 
+            <h1 class="text-logo"> 404 Page not found </h1> 
                 <div class="content">
                     <a href="{{ url_to('global':'url':'/') }}," class="btn btn--primary">Return home</a>
                 </div>
