Add GET parameters support and fix issues

--- a/templates/WEngine/defaultPages/500.html
+++ b/templates/WEngine/defaultPages/500.html
@@ -43,7 +43,7 @@
             <div class="wrapper">
             <h1 class="text-logo"> 500 Internal Server Error </h1> 
                 <div class="content">
-                    <a href="{{ url_to('/') }}," class="btn btn--primary">Return home</a>
+                    <a href="{{ url_to('url': '/') }}," class="btn btn--primary">Return home</a>
                 </div>
             </div>
         </section>
